--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -183,7 +183,7 @@ body:hover .visually-hidden button {
 
 .social-icons {
   .fa {
-    color: #000;
+    color: #4285f4;
   }
 
   .fa-behance,
@@ -211,7 +211,7 @@ body:hover .visually-hidden button {
   .fa-github,
   .fa-github-alt,
   .fa-github-square {
-    color: $github-color;
+    color: #6e5494;
   }
 
   .fa-google-plus,
