--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -15,13 +15,13 @@
   height: auto;
   /* sticky footer fix end */
   margin-top: 3em;
-  color: mix(#fff, $gray, 25%);
+  color: mix(#fff, $gray, 25%); // $lighter-gray; //
   -webkit-animation: intro 0.3s both;
           animation: intro 0.3s both;
   -webkit-animation-delay: 0.45s;
           animation-delay: 0.45s;
   background-color: $lighter-gray;
-  border-top: 1px solid $light-gray;
+  border-top: 1px solid $lighter-gray;
 
   footer {
     @include clearfix;
@@ -47,15 +47,20 @@
 
   .fas,
   .fab,
-  .far,
+  .far ,
   .fal {
-    color: mix(#fff, $gray, 25%);
+    color: $lighter-gray;
   }
 }
 
 .page__footer-copyright {
   font-family: $global-font-family;
   font-size: $type-size-7;
+}
+
+.content {
+    /* padding the footer adds 40 to footer height */
+    padding-bottom: 140px;
 }
 
 .page__footer-follow {
